fix the alignment in the hosts table

--- a/apps/admin/src/components/organisms/SshKeysTable/SshKeysTable.scss
+++ b/apps/admin/src/components/organisms/SshKeysTable/SshKeysTable.scss
@@ -3,12 +3,4 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 
-.ssh-keys-table {
-  .table {
-    th:last-child {
-      .table-header-cell div {
-        margin: auto;
-      }
-    }
-  }
-}
+.ssh-keys-table {}
